# file_finder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.bat  ff.bat  ff.ps1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: ffinder.rs  file_search.rs  grep_search.rs  main.rs  utils.rs
