[package]
name = "file_finder"
version = "0.1.0"
edition = "2021"
authors = ["Aadish Jain <aadish.jinesh.jain@gmail.com>"]
description = "A powerful, colorful CLI tool for searching files and text patterns with beautiful output"
readme = "README.md"
homepage = "https://github.com/mapcrafter2048/file_finder"
repository = "https://github.com/mapcrafter2048/file_finder"
license = "MIT"
keywords = ["cli", "search", "grep", "find", "windows"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
walkdir = "2.5"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
